@@ -2,7 +2,7 @@ module QC
   module Queries
     extend self
 
-    def insert(q_name, method, args, chan=nil)
+    def insert(q_name, method, args)
       QC.log_yield(:action => "insert_job") do
         s="INSERT INTO #{TABLE_NAME} (q_name, method, args) VALUES ($1, $2, $3)"
         res = Conn.execute(s, q_name, method, JSON.dump(args))
