@@ -1,16 +1,17 @@
 module QC
   class Queue
 
-    attr_reader :name
-    def initialize(name)
+    attr_reader :name, :top_bound
+    def initialize(name, top_bound=nil)
       @name = name
+      @top_bound = top_bound || QC::TOP_BOUND
     end
 
     def enqueue(method, *args)
       Queries.insert(name, method, args)
     end
 
-    def lock(top_bound=TOP_BOUND)
+    def lock
       Queries.lock_head(name, top_bound)
     end
 
